# SDL_3D_Graphics

./: .gitignore  CMakeLists.txt  CMakePresets.json  Coords.h  Cube.h  MatrixOperations.h  Pyramid.h  README.md  Renderer.h  Shape.h  coords.cpp  coords.h  cube.cpp  main.cpp  matrixoperations.cpp  pyramid.cpp  renderer.cpp  renderer.h  shape.cpp
src/: coords.cpp  cube.cpp  main.cpp  matrixoperations.cpp  pyramid.cpp  renderer.cpp  shape.cpp
src/headers/: Coords.h  Shape.h
